tests/type/errors/missing_return.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() -> int {
	var x = 1;
}

scene main
{
}
